--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "date-fns": "^3.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "@nx/eslint": "18.0.6",
@@ -29,6 +32,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "autoprefixer": "10.4.13",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -37,8 +41,10 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
     "nx": "18.0.6",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
+    "tailwindcss": "3.2.7",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
