--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - run: npm install && npm run build:all
+      - run: npm install && npm run build
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           BRANCH: gh-pages
