--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build:all": "nx run-many -t build"
+    "build": "nx run-many -t build"
   },
   "private": true,
   "dependencies": {
