--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "6.11.2",
-    "react-timer-hook": "^3.0.7"
+    "react-timer-hook": "^3.0.7",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@nx/eslint": "18.0.6",
@@ -30,6 +31,7 @@
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^4.2.0",
